--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,19 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "seed": "node seeds/seed.js",
     "watch": "nodemon server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.19.0",
+    "apollo-server-express": "^2.15.0",
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
-    "mongoose": "^5.11.6"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.10"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.3"
   }
 }
