--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ server/node_modules/
 .env.test.local
 .env.production.local
 .vscode 
-
+package.lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
