--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@apollo/client": "^3.3.7",
     "@formspree/react": "^2.2.4",
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "concurrently": "^6.2.1",
     "graphql": "^15.4.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
