--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.12"
+  },
+  "dependencies": {
+    "react-external-link": "^1.2.2"
   }
 }
