--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "install": "cd server && npm i && npm run seed && cd ../client && npm i",
+    "build": "cd client && npm run build",
+    "seed":"cd server && npm run seed"
   },
   "keywords": [],
   "author": "",
